--- a/materials/header.tex
+++ b/materials/header.tex
@@ -61,16 +61,16 @@ Simulated futures from an ETS model
 \end{block}\end{textblock}}
 
 \setbeamertemplate{title page}
-{\placefig{-0.01}{-0.01}{width=1.01\paperwidth,height=1.01\paperheight}{NYC.jpg}
+{\placefig{0}{-0.5}{width=1.01\paperwidth,height=1.45\paperheight}{africa1.jpg}
 \begin{textblock}{8.5}(.5,0.2)
-  \raggedright\fontsize{20}{20}\selectfont\bfseries\sffamily\textcolor{Orange}{\inserttitle}\\[0.2cm]
-  \fontsize{12}{12}\selectfont\bfseries\sffamily\textcolor{Orange}{\insertsubtitle}
+  \raggedright\fontsize{20}{20}\selectfont\bfseries\sffamily\textcolor{white}{\inserttitle}\\[0.2cm]
+  \fontsize{12}{12}\selectfont\bfseries\sffamily\textcolor{white}{\insertsubtitle}
   \end{textblock}
 \placefig{.5}{6.2}{width=2.4cm}{tsibble.png}
 \placefig{2.9}{6.2}{width=2.4cm}{feasts.png}
 \placefig{5.3}{6.2}{width=2.4cm}{fable.png}
 \begin{textblock}{7.5}(10.6,-.1)
-  {\fontsize{9}{9}\sf\color{Orange}https://workshop.f4sg.org/africast/}
+  {\fontsize{9}{9}\sf\color{white}https://workshop.f4sg.org/africast/}
 \end{textblock}
 }
 
