--- a/materials/00_intro.qmd
+++ b/materials/00_intro.qmd
@@ -10,7 +10,7 @@ author: ""
 source("setup.R")
 ```
 
-## Instructors
+## Project lead and Instructors
 
 \placefig{0.6}{1.5}{width=3.5cm}{Bahman}
 \begin{textblock}{8.2}(5.6,1.3)
@@ -30,11 +30,31 @@ source("setup.R")
 \end{alertblock}
 \end{textblock}
 
+## Mentors
+
+- Harsha Halgamuwe Hewage
+- Josephine Valensia
+- Krisanat Anukarnsakulchularp
+- Laiba Khan
+- Mandy Luon
+- Mingzhe Shi
+- Sneha Kharbanda
+- Zihao Wang
+
+## Coordination and admin lead
+
+- Henry Kissinger Ochieng 
+- Caroline Mugo
+- Winnie Chacha
+- Samuel Mwalili
+
 ## Assumptions
 
   * This is not an introduction to R. We assume you are broadly comfortable with R code, the RStudio environment and the tidyverse.
   * This is not a statistics course. We assume you are familiar with concepts such as the mean, standard deviation, quantiles, regression, normal distribution, likelihood, etc.
   * This is not a theory course. We are not going to derive anything. We will teach you time series and forecasting tools, when to use them, and how to use them most effectively.
+
+
 
 ## Key reference
 
