--- a/materials/05_accuracy_advance.qmd
+++ b/materials/05_accuracy_advance.qmd
@@ -18,6 +18,8 @@ h02 <- tsibbledata::PBS |>
   summarise(Cost = sum(Cost))
 melsyd <- tsibbledata::ansett |>
   filter(Airports == "MEL-SYD")
+antidiabetic_drug_sale <- PBS %>% filter(ATC2 == "A10") %>%
+  summarise(Cost = sum(Cost)/1e6) %>% filter_index("2000"~.)
 ```
 
 
@@ -82,45 +84,6 @@ and `tile_tsibble()`.
 
 For time series cross-validation, stretching windows are most commonly used.
 
-## Creating the rolling training sets 
-
-```{r animate, echo = FALSE, warning = FALSE, message = FALSE, fig.show='animate', interval=1/10, fig.height=4, fig.width=8, aniopts='controls,buttonsize=0.3cm,width=11.5cm'}
-library(tidyverse)
-library(gganimate)
-tourism_melb <- tourism %>% 
-  filter(Region == "Melbourne", Purpose == "Holiday")
-types <- forcats::fct_inorder(c("Slide", "Tile", "Stretch"))
-slide_window <- slider(tourism_melb$Quarter, .size = 4) %>%
-  map_dfr(function(x) tibble(xmin = min(x), xmax = max(x))) %>%
-  mutate(ymin = -Inf, ymax = Inf, group = row_number(), type = types[1])
-
-tile_window <- tiler(tourism_melb$Quarter, .size = 4) %>%
-  map_dfr(function(x) tibble(xmin = min(x), xmax = max(x))) %>%
-  mutate(ymin = -Inf, ymax = Inf, type = types[2])
-tile_window <- tile_window[c(rep(1:20, each = 4)), ] %>% 
-  mutate(group = row_number())
-
-stretch_window <- stretcher(tourism_melb$Quarter, .init = 4) %>%
-  map_dfr(function(x) tibble(xmin = min(x), xmax = max(x))) %>%
-  mutate(ymin = -Inf, ymax = Inf, group = row_number(), type = types[3])
-
-window <- bind_rows(slide_window, tile_window, stretch_window)
-
-ggplot() +
-  geom_line(aes(x = Quarter, y = Trips), data = tourism_melb, colour = "grey", size = 1.2) +
-  geom_rect(aes(
-    xmin = xmin, xmax = xmax,
-    ymin = ymin, ymax = ymax,
-    group = group
-  ), data = window, 
-  fill = "#9ecae1", colour = "#9ecae1", size = 1.5, alpha = 0.6) +
-  xlab("Quarter") +
-  ylab("Trips") +
-  facet_wrap(~ type, ncol = 1) +
-  theme_bw() +
-  transition_manual(group)
-```
-
 ## Time series cross-validation {-}
 
 \fontsize{12}{13}\sf
@@ -129,17 +92,17 @@ Stretch with a minimum length of 24, growing by 1 each step.
 
 ```{r google-stretch, cache=TRUE, dependson="split_in_r"}
 forecast_horizon <- 12
-test <- antidiabetic_drug_sale %>% 
+test <- antidiabetic_drug_sale |> 
   slice((n()-forecast_horizon+1):n())
-train <- antidiabetic_drug_sale %>%
+train <- antidiabetic_drug_sale |> 
   slice(1:(n()-forecast_horizon))
-drug_sale_tcsv <-  train %>% slice(1:(n()-forecast_horizon)) %>% 
+drug_sale_tcsv <-  train |> slice(1:(n()-forecast_horizon)) |> 
   stretch_tsibble(.init = 24, .step = 1)
 ```
 
 \fontsize{10}{11}\sf
 ```{r stretch-print, echo = FALSE}
-drug_sale_tcsv %>% print(n = 4)
+drug_sale_tcsv |> print(n = 4)
 ```
 
 ## Time series cross-validation {-}
@@ -149,7 +112,7 @@ drug_sale_tcsv %>% print(n = 4)
 Estimate RW w/ drift models for each window.
 
 ```{r google-fit, cache = TRUE}
-drug_fit_tr <- drug_sale_tcsv %>% 
+drug_fit_tr <- drug_sale_tcsv |> 
   model(snaive=SNAIVE(Cost))
 ```
 
@@ -165,25 +128,26 @@ print(drug_fit_tr, n = 4)
 Produce 8 step ahead forecasts from all models.
 
 ```{r google-fc, cache = TRUE}
-drug_fc_tr <- drug_fit_tr %>% 
-  forecast(h=forecast_horizon) %>% 
-  group_by(.id) %>% 
-  mutate(h=row_number()) %>% 
-  ungroup()
+drug_fc_tr <- drug_fit_tr |> 
+  forecast(h=forecast_horizon)
 ```
 
 \fontsize{10}{11}\sf
 ```{r google-fc-print, echo = FALSE}
-drug_fc_tr %>% print(n = 4)
+drug_fc_tr |> print(n = 4)
 ```
 
 ## Time series cross-validation {-}
 
 \small
 
-```{r google-accuracy, cache = TRUE, results = 'hide', eval = FALSE}
+```{r google-accuracy1, cache = TRUE}
 # Cross-validated
-drug_fc_tr %>% accuracy(antidiabetic_drug_sale)
+drug_fc_tr |> 
+  accuracy(antidiabetic_drug_sale,
+           measures = list( point_accuracy_measures, 
+                            interval_accuracy_measures,
+                            distribution_accuracy_measures))
 ```
 
 
@@ -340,19 +304,16 @@ augment(fit) |> features(.resid, ljung_box, lag = 10)
 \fontsize{12}{12}\sf
 
 1. First, import your data and prepare them using `tsibble` function. 
-2. Visualise and see wether your series contains key features
-3. Determine how much of your data you want to allocate to training, and how much to testing; the sets should not overlap.
-4. Subset the data to create a training set, which you will use as an argument in your forecasting function(s). Optionally, you can also create a test set to use later.
-5. Compute forecasts of the training set using whichever forecasting function(s) you choose, and set h equal to the number of values you want to forecast.
+2. Visualise and see whether your series contains key patetrns Use domain knowledge to understand your data and potential driving factors.
+3. Split the data to create a training set, which you will use as an argument in your forecasting function(s). You can also create a test set to use later.
+4. Create different rolling origins to evaluate forecast accuracy using time series cross validation
 
 ## Recap
 
 \fontsize{12}{12}\sf
 
-6. Use residual diagnostic based on residuals in the training set to see wether all informations is captured by models.
-7. Create different windows to evaluate forecast accuracy using time series cross validation
-8. Train model to each window
-5. To view the results of accuracy, use the accuracy() function with the `fable` as the first argument and original data  as the second.
-6. Pick a measure in the output to evaluate the forecast(s); a smaller error indicates higher accuracy.
-7. Forecast using all data for test set and visualise forecasts against actual values
-8. Finally, produce forecast using the selected approach for future.
+5. Train model to each origin
+6. Computer forecast accuracy, use the `accuracy()` function with the `fable` as the first argument and original data  as the second.
+7. Compare methods using point, prediction interval and distributional accuracy measure; a smaller error indicates higher accuracy.
+8. Forecast using all data for the future using the best method.
+9. Use residual diagnostic based on residuals of the best model.
