--- a/exercises/day5.qmd
+++ b/exercises/day5.qmd
@@ -3,17 +3,91 @@ title: "Lab exercise: day 5"
 editor: visual
 ---
 
+```{r}
+#| label: setup
+
+library(tsibble)
+library(fable)
+library(feasts)
+library(tidyverse)
+```
+
 # Learn
+
+Compare the in-sample accuracy statistics for all models used to forecast Australia's print media turnover. Which is most accurate, and which is least? Does this align with your expectations?
+
+```{r}
+aus_print <- aus_retail |> 
+  filter(Industry == "Newspaper and book retailing") |> 
+  summarise(Turnover = sum(Turnover))
+
+aus_print |> 
+  autoplot(Turnover)
+
+fit <- aus_print |> 
+  model(
+    snaive = SNAIVE(Turnover),
+    lm = TSLM(log(Turnover) ~ trend(knots = yearmonth("2011 Jan")) + season()),
+    ets = ETS(Turnover),
+    arima = ARIMA(log(Turnover))
+  )
+
+???(fit)
+```
+
+Modify the code to produce and evaluate forecasts on a test set. Does this change your conclusions?
+
+```{r}
+fit_train <- aus_print |> 
+  ??? |> 
+  model(
+    snaive = SNAIVE(Turnover),
+    lm = TSLM(log(Turnover) ~ trend(knots = yearmonth("2011 Jan")) + season()),
+    ets = ETS(Turnover),
+    arima = ARIMA(log(Turnover))
+  )
+
+???(fit_train, ???)
+```
+
+Now compare the cross-validated accuracy statistics for all models used to forecast Australia's print media turnover. Which is most accurate, and which is least? Does it differ to the results from the in-sample (training set) and out-of-sample (test set) accuracy?
+
+```{r}
+fit_cv <- aus_print |> 
+  ??? |> 
+  model(
+    snaive = SNAIVE(Turnover),
+    lm = TSLM(log(Turnover) ~ trend(knots = yearmonth("2011 Jan")) + season()),
+    ets = ETS(Turnover),
+    arima = ARIMA(log(Turnover))
+  )
+
+fit_cv |>
+  forecast(h = "1 year") |>
+  ???(???)
+```
+
+Produce a residual diagnostics plot of the ETS and ARIMA models, are the residuals consistent with the assumptions of the models? Do they appear random (time plot), uncorrelated (ACF plot), and normally distributed (histogram)?
+
+```{r}
+fit <- aus_print |> 
+  model(
+    ets = ETS(Turnover),
+    arima = ARIMA(log(Turnover))
+  )
+
+fit |> 
+  select(???) |> 
+  gg_???()
+
+fit |> 
+  select(???) |> 
+  gg_???()
+```
 
 # Apply
 
 ```{r}
-library(tsibble)
-library(fable)
-library(feasts)
-library(fabletools)
-library(tidyverse)
-
 vaccine_administrated_tsb <- read_rds("data/vaccine_administrated_tsb.rds")
 ```
 
